# FFmpeg

app/: build.gradle
app/src/androidTest/java/com/noodle/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Arguments.h  CMakeLists.txt  bade_include.h  encode_h264.cpp  encode_h264.h  mylog.h  native-lib.cpp  threadsafe_queue.cpp
app/src/main/java/com/noodle/ffmpeg/: CameraManager.java  CameraStatus.java  DeviceUtils.java  FfmpegManager.java  HolderCallBack.java  MainActivity.java  MediaManager.java  StringUtils.java
app/src/main/java/com/noodle/ffmpeg/camera/: AudioRecorder.java  FFmpegBridge.java  IMediaRecorder.java  MediaObject.java  MediaThemeObject.java
app/src/main/java/com/noodle/ffmpeg/camera/callback/: OnPrepareCallback.java
app/src/main/java/com/noodle/ffmpeg/util/: CacheFileUtil.java  DeviceUtils.java  FileUtils.java  Log.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/noodle/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
